# Dre4my26-homework-1

./: CMakeLists.txt  README.md
labs_src/: CMakeLists.txt
labs_src/lab1/: ClosedPolyline.cpp  ClosedPolyline.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  RegularPolygon.cpp  RegularPolygon.h  Trapezoid.cpp  Trapezoid.h  Triangle.cpp  Triangle.h
labs_tests/: CMakeLists.txt  lab1_tests.cpp
